app/assets/stylesheets/components/_works.scss
#works{
  position: relative;
  h3{
    color: $my-orange;
    font-size: 3rem;
    font-weight: bold;
  }
  h4{
    font-weight: bold;
    color: $my-blue;
  }
  p {
    font-size: 1.5rem;
  }
  .scroll{
    text-decoration: none;
    color: $my-blue;
    transition: 0.3s;
  }
  .scroll:hover{
    color: $my-orange;
  }
  .carroussel{
    max-width: 525px;
    max-height: 688px;
    margin: 0, auto;
    position: relative;
    .slider img{
      max-width: 267px;
      max-height: 577px;
      display: none;
      max-width: 525px;
      max-height: 688px;
      border-radius: 4px;
      overflow: hidden;
    }
    img.active{
      display: block;
      animation: fade 0.8s;
    }
  }
  .controls{
    width: auto;
    height: 5%;
    cursor: pointer;
    div{
      width: 116px;
      height: 4px;
      margin-right: 10px;
      background-color: $my-gray;
    }
    div.active{
      background-color: $my-blue;
    }
    .work-nb{
      display: none;
      font-size: 1rem;
      font-weight: bold;
      color: $my-blue;
      cursor: pointer;
    }
    .work-nb.active{
      display: block;

    }
  }
  @keyframes fade {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }
  .cont-btn{
    position: absolute;
    top: 50%;
    left: 61.3%;
    width: 100px;
    height: 64px;
    background-color: $my-gray;
    box-shadow: 0 0.5px 0.5px $my-blue;
    border-radius: 35px 0 0 35px;
    @media (min-width: 0px) and (max-width: 296px) {
      left: 74%;
    }
    @media (min-width: 297px) and (max-width: 318px) {
      left: 72%;
    }
    @media (min-width: 319px) and (max-width: 350px) {
      left: 70%;
    }
    @media (min-width: 351px) and (max-width: 386px) {
      left: 68%;
    }
    @media (min-width: 387px) and (max-width: 428px) {
      left: 66%;
    }
    @media (min-width: 429px) and (max-width: 506px) {
      left: 64%;
    }
    @media (min-width: 507px) and (max-width: 543px) {
      left: 62%;
    }
  }
  .btn-nav{
    background-image: url('https://res.cloudinary.com/lucas-vittaz/image/upload/v1658064240/portfolio/Frame_2_mkl1ca.svg');
    background-repeat: no-repeat;
    background-size:  contain;
    width: 100%;
    height: 100%;
    margin-left: 20%;
    cursor: pointer;
  }
}
  .cont-text{
    display: none;
    .lang{
      margin-right: 10px;
      width: auto;
      height: auto;
      padding: 0.7rem;
      background-color: $my-gray;
      color: $my-white;
      border-radius: 4px;
      transition: 0.3s ease-in-out;
    }
    .lang:hover{
      background-color: $my-blue;
    }
    .fa-github{
      color: $my-blue;
      transition: 0.3s ease-in-out;
    }
    .fa-github:hover{
      opacity: 0.7;;
    }
  }
  .cont-text.active{
    display: block;
    animation: fade 0.8s;
  }
  .scroll{
    text-decoration: none;
    color: $my-blue;
  }
  .works-paint{
    position: absolute;
    top:  20%;
    left: 0;
    z-index: -1;
    background-size: contain;
    background-repeat: no-repeat;
    width: 200px;
    height: 200px;
  }
  .works-paint-2{
    position: absolute;
    top:  0%;
    right: 20%;
    z-index: -1;
    background-size: contain;
    background-repeat: no-repeat;
    width: 100px;
    height: 100px;
  }

